...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WyG-Ue-bBf">
                                                    <rect key="frame" x="330" y="4" width="68" height="58"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="Like" title=""/>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i4H-gt-75g">
                                                    <rect key="frame" x="32" y="184" width="101.5" height="16"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="w71-6o-Leq" eventType="touchUpInside" id="KMZ-G8-787"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MCE-e0-cj6">
                                <rect key="frame" x="24" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="Ulp-6g-vCm"/>
                                    <constraint firstAttribute="height" constant="48" id="mFE-EI-8dL"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="gqu-P4-G7E"/>
                                </constraints>
                                <color key="tintColor" name="YP Black "/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
...
